--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -23,19 +23,23 @@
     font-weight: 900;
     margin-top: 2.5rem;
 
-    span{
+    span {
       color: var(--cyan-500);
     }
   }
 
-  p{
+  p {
     font-weight: 1.5rem;
     line-height: 2.25rem;
     margin-top: 1.5rem;
 
-    span{
+    span {
       color: var(--cyan-500);
       font-weight: bold;
     }
+  }
+
+  button {
+    margin-top: 2.5rem;
   }
 }
